feat: Reuse player id in webSocket server

--- a/Server/templates/index.html
+++ b/Server/templates/index.html
@@ -2,13 +2,15 @@
 
 <body>
     <div id="main">
+        <h1>Connection:</h1>
+        <a id="start_demo" class="btn btn-lg btn-success py-1" href="#" role="button">Connect To WS</a>
         <h1>Messages From Server:</h1>
-        <div id="messages"></div>
+        <div id="messages">
+        </div>
     </div>
     <div id="stats">
         <h1>Stats:</h1>
         <div class="p-3 mb-2 bg-secondary" id="demo-div">
-            <a id="start_demo" class="btn btn-lg btn-success py-1" href="#" role="button">Connect To WS</a>
             <p style="margin-top:1rem;">Num. of datapoints: <span class="badge badge-warning"
                     id="num-observed-events">0</span></p>
 
